hphp/test/zend/good/Zend/tests/bug41351.php.expectf

Fatal error: Can't use [] for reading in %s/bug41351.php on line 5
